--- a/Views/FrontPage.xaml
+++ b/Views/FrontPage.xaml
@@ -51,7 +51,7 @@
         </Grid.Background>
 
         <Button x:Name="button"  FontSize="22" HorizontalAlignment="Left" Margin="60,250,0,0" VerticalAlignment="Top" RenderTransformOrigin="-7.615,-0.312" Width="337" Height="60">
-            <StackPanel Height="60" Width="337" VerticalAlignment="Top" Margin="-202,-22,-168,-22">
+            <StackPanel Width="337" Margin="-185,-22,-152,-22">
                 <StackPanel.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="Black" Offset="0"/>
@@ -59,12 +59,12 @@
                     </LinearGradientBrush>
                 </StackPanel.Background>
 
-                <TextBlock Text="EUROPE" VerticalAlignment="Center" HorizontalAlignment="Right" Padding="0,7" FontSize="36" Height="60" FontWeight="Bold" Margin="0,0,100,0"></TextBlock>
+                <TextBlock Text="NORTH AMERICA" VerticalAlignment="Center" HorizontalAlignment="Right" Padding="0,7" FontSize="36" Height="60" FontWeight="Bold" Margin="0,0,13,0"></TextBlock>
             </StackPanel>
 
             <Button.Flyout   >
                 <Flyout  Placement="Bottom"  >
-                    <StackPanel  Height="251" Width="385">
+                    <StackPanel  Height="166" Width="385">
                         <StackPanel.Background>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                                 <GradientStop Color="Black" Offset="0"/>
@@ -72,10 +72,8 @@
                             </LinearGradientBrush>
                         </StackPanel.Background>
                         <TextBlock TextWrapping="Wrap" Text="hvugvvvvguvvvvvvvvvgyvvvvvvvvvvvv jkjk hkkh hbjkl hkh hjgk gjhk hkk khhhhhhh hkk hk kh khb khhhh khkhkhkh hkkkkhh hkhk khhkk klkh khhk khk jhk hgk jkkk gkk jkjk kk " ></TextBlock>
-                        <TextBlock Text="FRANCE" Margin="2,10,18,10" FontWeight="Bold" FontFamily="Segoe UI Black" />
-                        <TextBlock Text="DENMARK" Margin="2,10,18,10" FontWeight="Bold" />
-                        <TextBlock Text="SLOVKIA" Margin="2,10,18,10" FontWeight="Bold" />
-                        <TextBlock Text="LUTHANIA" Margin="2,10,18,10" FontWeight="Bold"></TextBlock>
+                        <TextBlock Text="USA" Margin="2,10,18,10" FontWeight="Bold" FontFamily="Segoe UI Black" />
+                        <TextBlock Text="CANADA" Margin="2,10,18,10" FontWeight="Bold" />
 
 
                     </StackPanel>
@@ -92,13 +90,13 @@
                     </LinearGradientBrush>
                 </StackPanel.Background>
 
-                <TextBlock Text="ASIA" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="0,7" FontSize="36" Height="60" FontWeight="Bold" Margin="123,0,122,0"></TextBlock>
+                <TextBlock Text="EUROPE" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="0,7" FontSize="36" Height="60" FontWeight="Bold" Margin="123,0,122,0"></TextBlock>
 
 
             </StackPanel>
             <Button.Flyout  >
                 <Flyout     Placement="Bottom"  >
-                    <StackPanel  Height="207" Width="385">
+                    <StackPanel  Height="242" Width="385">
                         <StackPanel.Background>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                                 <GradientStop Color="Black" Offset="0"/>
@@ -106,11 +104,10 @@
                             </LinearGradientBrush>
                         </StackPanel.Background>
                         <TextBlock TextWrapping="Wrap" Text="hvugvvvvguvvvvvvvvvgyvvvvvvvvvvvv jkjk hkkh hbjkl hkh hjgk gjhk hkk khhhhhhh hkk hk kh khb khhhh khkhkhkh hkkkkhh hkhk khhkk klkh khhk khk jhk hgk jkkk gkk jkjk kk " ></TextBlock>
-                        <TextBlock Text="INDIA" Margin="2,10,18,10" FontWeight="Bold" FontFamily="Segoe UI Black" />
-                        <TextBlock Text="CHINA" Margin="2,10,18,10" FontWeight="Bold" />
-                        <TextBlock Text="JAPAN" Margin="2,10,18,10" FontWeight="Bold" />
-
-
+                        <TextBlock Text="FRANCE" Margin="2,10,18,10" FontWeight="Bold" FontFamily="Segoe UI Black" />
+                        <TextBlock Text="DENMARK" Margin="2,10,18,10" FontWeight="Bold" />
+                        <TextBlock Text="SLOVKIA" Margin="2,10,18,10" FontWeight="Bold" />
+                        <TextBlock Text="LUTHANIA" Margin="2,10,18,10" FontWeight="Bold"></TextBlock>
 
                     </StackPanel>
                 </Flyout>
@@ -125,14 +122,14 @@
                         <GradientStop Color="Red" Offset="1"/>
                     </LinearGradientBrush>
                 </StackPanel.Background>
-                <TextBlock Text="NORTH AMERICA " VerticalAlignment="Center" HorizontalAlignment="Center" Padding="0,7" FontSize="36" Height="60" FontWeight="Bold" Margin="12,0,8,0" Width="317"></TextBlock>
+                <TextBlock Text="ASIA " VerticalAlignment="Center" HorizontalAlignment="Center" Padding="110,7" FontSize="36" Height="60" FontWeight="Bold" Margin="12,0,8,0" Width="317"></TextBlock>
 
 
 
             </StackPanel>
             <Button.Flyout  >
                 <Flyout    Placement="Bottom"  >
-                    <StackPanel  Height="168" Width="385">
+                    <StackPanel  Height="203" Width="385">
                         <StackPanel.Background>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                                 <GradientStop Color="Black" Offset="0"/>
@@ -141,8 +138,9 @@
                         </StackPanel.Background>
 
                         <TextBlock TextWrapping="Wrap" Text="hvugvvvvguvvvvvvvvvgyvvvvvvvvvvvv jkjk hkkh hbjkl hkh hjgk gjhk hkk khhhhhhh hkk hk kh khb khhhh khkhkhkh hkkkkhh hkhk khhkk klkh khhk khk jhk hgk jkkk gkk jkjk kk " ></TextBlock>
-                        <TextBlock Text="USA" Margin="2,10,18,10" FontWeight="Bold" FontFamily="Segoe UI Black" />
-                        <TextBlock Text="CANADA" Margin="2,10,18,10" FontWeight="Bold" />
+                        <TextBlock Text="INDIA" Margin="2,10,18,10" FontWeight="Bold" FontFamily="Segoe UI Black" />
+                        <TextBlock Text="CHINA" Margin="2,10,18,10" FontWeight="Bold" />
+                        <TextBlock Text="JAPAN" Margin="2,10,18,10" FontWeight="Bold" />
 
 
                     </StackPanel>
