--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -38,6 +38,7 @@
                    Grid.ColumnSpan="2"
                    Padding="0"
                    Margin="0">
+
             <SplitView.Pane>
                 <Grid>
                     <Grid.RowDefinitions>
@@ -54,9 +55,14 @@
                             View Catalog
                             Filter Accommodations
                             Find Booking-->
-                    <ListView Grid.Row="1"
-                              Grid.RowSpan="5"
-                              Grid.ColumnSpan="2">
+                    <ListView Height="670" Grid.Row="1"
+                              Grid.RowSpan="6" Margin="0,0,0,-382" VerticalAlignment="Top">
+                        <ListView.Background>
+                            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                <GradientStop Color="Black" Offset="0"/>
+                                <GradientStop Color="#FF7E0D0D" Offset="1"/>
+                            </LinearGradientBrush>
+                        </ListView.Background>
                         <ListViewItem Height="48"
                                       VerticalAlignment="Center"
                                       HorizontalAlignment="Stretch"
@@ -162,14 +168,22 @@
                 </Grid>
             </SplitView.Pane>
             <!--Content frame-->
-            <Grid Padding="0"
+            <Grid  Padding="0"
                   Margin="0">
+                <Grid.Background>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="Black" Offset="0"/>
+                        <GradientStop Color="#FFC80D0D" Offset="1"/>
+                    </LinearGradientBrush>
+                </Grid.Background>
 
                 <Grid.RowDefinitions>
                     <RowDefinition Height="48"></RowDefinition>
-                    <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="37*"></RowDefinition>
+                    <RowDefinition Height="535*"/>
+                    <RowDefinition Height="100*"/>
                 </Grid.RowDefinitions>
-                <ListViewItem HorizontalAlignment="Left"
+                <ListViewItem  HorizontalAlignment="Left"
                              Padding="6">
                     <StackPanel Orientation="Horizontal">
                         <SymbolIcon Symbol="Back"
@@ -194,14 +208,20 @@
                 <TextBlock Grid.Row="0" 
                            Text="Home Page"
                            VerticalAlignment="Center"
-                           HorizontalAlignment="Center" Margin="658,14,657,14"></TextBlock>
-                <Frame SourcePageType="{x:Bind ViewModel.NavigationControl.MainFrame.SourcePageType, Mode=TwoWay}" Grid.Row="1" />
+                           HorizontalAlignment="Center" Margin="578,14,577,14"></TextBlock>
+                <Frame SourcePageType="{x:Bind ViewModel.NavigationControl.MainFrame.SourcePageType, Mode=TwoWay}" Grid.Row="1" Grid.RowSpan="3" />
                 <Button  x:Name="button" Background="Black" Content="LOGIN" HorizontalAlignment="Left" Margin="1077,10,0,0" VerticalAlignment="Top">
                     <Button.Flyout>
                         <Flyout>
                             <StackPanel VerticalAlignment="Center"
                     HorizontalAlignment="Center"
                     Width="230">
+                                <StackPanel.Background>
+                                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                        <GradientStop Color="Black" Offset="0"/>
+                                        <GradientStop Color="#FF910C0C" Offset="1"/>
+                                    </LinearGradientBrush>
+                                </StackPanel.Background>
 
 
                                 <SymbolIcon Symbol="People" Height="56" Margin="70,0,65,0"/>
@@ -221,7 +241,7 @@
                              ></HyperlinkButton>-->
                                 <TextBlock Padding="5" Text="{x:Bind ViewModel.Login.StatusMessages , Mode=TwoWay}"
                            Foreground="Red"
-                           HorizontalAlignment="Center"></TextBlock>            
+                           HorizontalAlignment="Center"></TextBlock>
                             </StackPanel>
                         </Flyout>
                     </Button.Flyout>
@@ -242,7 +262,14 @@
                       x:Name="MenuListBoxItem"
                       Tapped="MenuListBoxItem_OnTapped"
                       VerticalAlignment="Top"
-                      Content="&#xE700;"/>
+                      Content="&#xE700;">
+            <ListViewItem.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black" Offset="0"/>
+                    <GradientStop Color="#FF8D0B0B" Offset="1"/>
+                </LinearGradientBrush>
+            </ListViewItem.Background>
+        </ListViewItem>
     </Grid>
 </Page>
 
