--- a/Views/CreateBookingView.xaml
+++ b/Views/CreateBookingView.xaml
@@ -42,13 +42,11 @@
             </StackPanel.DataContext>
             <DatePicker Grid.Row="1"
                     Margin="10"
-                    Header="Check-In Date"
-                        Date="{Binding CheckInDate, Mode=TwoWay}"></DatePicker>
+                    Header="Check-In Date"></DatePicker>
             <DatePicker Grid.Row="2" 
                     Grid.Column="0"
                     Margin="10"
-                    Header="Check-Out Date"
-                        DateChanged="{Binding CheckOutDate, Mode=TwoWay}"></DatePicker>
+                    Header="Check-Out Date"></DatePicker>
             <TextBox Grid.Row="3"
                  Grid.Column="0"
                  Margin="10"
@@ -63,35 +61,26 @@
                  Width="250"
                  HorizontalAlignment="Left"
                  Header="Payer's Email"
-                 PlaceholderText="Email"
-                     Text="{x:Bind Vm.CustomersEmail, Mode=TwoWay}"></TextBox>
+                 PlaceholderText="Email"></TextBox>
             <TextBox Grid.Row="5"
                  Grid.Column="0"
                  Margin="10"
                  Width="250"
                  HorizontalAlignment="Left"
                  Header="Payer's Phone"
-                 PlaceholderText="Phone Number (DK)"
-                     Text="{x:Bind Vm.CustomersPhoneNumber, Mode=TwoWay}"></TextBox>
-            <ComboBox x:Name="selectTypeComboBox"
-                Grid.Row="6"
+                 PlaceholderText="Phone Number (DK)"></TextBox>
+            <TextBlock Grid.Row="6"
                  Grid.Column="0"
                  Margin="10"
                  Width="250"
                  HorizontalAlignment="Left"
-                 Header="Accommodation Type:"
-                      ItemsSource="{Binding apartSelectList}"
-                      
-                      SelectedItem="{Binding TypeSelected, Mode=TwoWay}"></ComboBox>
-            <ComboBox Name="SelectPeopleComboBox"
-                Grid.Row="7"
+                 Text="Accommodation: "></TextBlock>
+            <ComboBox Grid.Row="7"
                  Grid.Column="0"
                  Margin="10"
                  Width="250"
                  HorizontalAlignment="Left"
-                 Header="Number of People: "
-                      ItemsSource="{Binding peopleSelectList, Mode=OneWay}"
-                      SelectedItem="{Binding AdultsCount, Mode=TwoWay}"></ComboBox>
+                 Header="Number of People: "></ComboBox>
             <CheckBox Grid.Row="8"
                       Grid.Column="0"
                       Margin="10"
@@ -104,6 +93,7 @@
                  HorizontalAlignment="Left"
                  Content="Submit"
                     Command="{x:Bind Vm.Book, Mode=OneWay}">
+                
             </Button>
         </StackPanel>
         
