--- a/Views/MyBookings.xaml
+++ b/Views/MyBookings.xaml
@@ -7,7 +7,24 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        
+    <Grid >
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="Black" Offset="0"/>
+                <GradientStop Color="#FFA20D0D" Offset="1"/>
+            </LinearGradientBrush>
+        </Grid.Background>
+        <GridView Margin="0,10,0,-10">
+            <StackPanel Width="575" Height="710" >
+                <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="81,132,0,0" TextWrapping="Wrap" Text="NAME" FontSize="22" VerticalAlignment="Top" Height="41" Width="137"/>
+
+            </StackPanel>
+            <StackPanel Height="683" Width="689">
+                <TextBlock x:Name="myBookingTextBlock" FontSize="30" HorizontalAlignment="Center" Margin="317,132,171,0" TextWrapping="Wrap" Text="My Bookings" VerticalAlignment="Top" Width="201"/>
+                <ListView>
+                    
+                </ListView>
+            </StackPanel>
+        </GridView>
     </Grid>
 </Page>
