--- a/Views/PropertiesPage.xaml
+++ b/Views/PropertiesPage.xaml
@@ -40,7 +40,7 @@
 
                    IsPaneOpen="True"
 
-                   x:Name="SplitView">
+                   x:Name="SplitView" Margin="0,-10,0,10">
             <SplitView.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0"/>
@@ -120,9 +120,9 @@
 
                                Stretch="Fill"
 
-                               Margin="10"></Image>
-
-                                <TextBlock Grid.Row="0"
+                               Margin="10, 0, 10, 5"></Image>
+                                <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="0">
+                                    <TextBlock Grid.Row="0"
 
                                        VerticalAlignment="Center"
 
@@ -130,47 +130,53 @@
 
                                    Text="Name:"
 
-                                   Margin="10"></TextBlock>
+                                   Margin="10,0,0,0"></TextBlock>
 
-                                <TextBlock Grid.Row="0"
-
-                                   Grid.Column="2"
-
-                                   Text="{x:Bind Name, Mode=OneWay}"
-
-                                   Margin="10"></TextBlock>
-
-                                <TextBlock Grid.Row="1"
+                                    <TextBlock Grid.Row="0"
 
                                    Grid.Column="1"
 
-                                   Text="Minimum price per night:"
+                                   Text="{x:Bind Name, Mode=OneWay}"
+TextAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Left"
+                                   Margin="5, 0, 0 ,0"></TextBlock>
+                                </StackPanel>
 
-                                   Margin="10"></TextBlock>
+                                <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="1">
+                                    <TextBlock Grid.Row="1"
 
-                                <TextBlock Grid.Row="1"
+                                   Grid.Column="1"
+
+                                   Text="Lowest Price:"
+                                               TextAlignment="Center" VerticalAlignment="Center"
+
+                                   Margin="10,0,0,0"></TextBlock>
+
+                                    <TextBlock Grid.Row="0"
 
                                    Grid.Column="2"
 
                                    Text="{x:Bind MinPrice, Mode=OneWay}"
+HorizontalAlignment="Left"
+                                   Margin="5, 0, 0, 0" TextAlignment="Center" VerticalAlignment="Center"></TextBlock>
+                                </StackPanel>
 
-                                   Margin="10"></TextBlock>
-
-                                <TextBlock Grid.Row="2"
+                                <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="2">
+                                    <TextBlock Grid.Row="0"
 
                                    Grid.Column="1"
 
                                    Text="Location:"
+VerticalAlignment="Center" TextAlignment="Center"
+                                   Margin="10,0,0,5"></TextBlock>
 
-                                   Margin="10"></TextBlock>
+                                    <TextBlock Grid.Row="2"
 
-                                <TextBlock Grid.Row="2"
-
-                                   Grid.Column="2"
+                                   Grid.Column="1"
 
                                    Text="{x:Bind Location, Mode=OneWay}"
-
-                                   Margin="10"></TextBlock>
+VerticalAlignment="Center" HorizontalAlignment="Left"
+                                   Margin="5, 0 ,0 ,0"></TextBlock>
+                                </StackPanel>
 
                             </Grid>
 
@@ -223,13 +229,13 @@
 
                     <TextBlock Text="{x:Bind Vm.SelectedProperty.Name, Mode=OneWay}"
 
-                       Grid.Row="0" Grid.ColumnSpan="2"
+                       Grid.Row="0"
 
                        HorizontalAlignment="Center"
 
                        FontSize="30"
 
-                       Padding="9"></TextBlock>
+                       Padding="9" Margin="190,-5,0,5"/>
 
 
 
@@ -238,13 +244,10 @@
 
                           Grid.RowSpan="2" 
 
-                          Margin="0,20,0.333,5">
+                          Margin="0,20,86,5">
 
                         <Grid.ColumnDefinitions>
 
-                            <ColumnDefinition Width="Auto"></ColumnDefinition>
-
-                            <ColumnDefinition Width="*"></ColumnDefinition>
 
                         </Grid.ColumnDefinitions>
 
@@ -262,70 +265,35 @@
 
                         </Grid.RowDefinitions>
 
-                        <TextBlock Text="Location:"
-
-                       Grid.Row="1" Grid.Column="0"
-
-                       HorizontalAlignment="Left"
-
-                       Padding="15"
-
-                       FontSize="22" Margin="0,0,0,0.333" Width="117"></TextBlock>
-
-
-                        <TextBlock Text="{x:Bind Vm.SelectedProperty.DisplayLocation, Mode=OneWay}"
-
-                       Grid.Row="1" Grid.Column="1"
-
-                       HorizontalAlignment="Left"
-
-                       Padding="15"
-
-                       FontSize="22" Margin="47,0,0,0" Width="390"/>
-
-
-
-                        <TextBlock Text="Minimum price:"
-
-                       Grid.Row="2" Grid.Column="0"
-
-                       HorizontalAlignment="Left"
-
-                       Padding="15"
-
-                       FontSize="22" Margin="0,0.667,0,57.333" Width="203" Grid.ColumnSpan="2"/>
-
-                        <TextBlock Text="{x:Bind Vm.SelectedProperty.MinPrice, Mode=OneWay}"
-
-                       Grid.Row="2" Grid.Column="1"
-
-                       HorizontalAlignment="Left"
-
-                       Padding="15"
-
-                       FontSize="22" Margin="50,0.667,0,57.333" Width="396"></TextBlock>
-
-                        <StackPanel Orientation="Horizontal" 
-                     HorizontalAlignment="Left"
-                                VerticalAlignment="Top"
-                     Padding="15"
-                      Grid.Row="2" Margin="51,65.667,0,0" Height="52" Width="135" Grid.Column="1" Grid.RowSpan="2" >
-                            <SymbolIcon Symbol="Favorite"
-                    Foreground="White"></SymbolIcon>
-                            <SymbolIcon Symbol="Favorite"
-                    Foreground="Yellow"></SymbolIcon>
-                            <SymbolIcon Symbol="Favorite"
-                    Foreground="Yellow"></SymbolIcon>
-                            <SymbolIcon Symbol="Favorite"
-                    Foreground="Yellow"></SymbolIcon>
-                            <SymbolIcon Symbol="Favorite"
-                    Foreground="Yellow"></SymbolIcon>
+                        <TextBlock Text="{Binding SelectedProperty.DisplayName, Mode=OneWay}" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" Padding="15" FontSize="22" Width="554" Grid.ColumnSpan="2"/>
+                        <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="2">
+                            <TextBlock Text="Minimum price:" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left" Padding="15" FontSize="22" Margin="0,1,0,57" Width="172"/>
+                            <TextBlock Text="{x:Bind Vm.SelectedProperty.MinPrice, Mode=OneWay}" Grid.Row="2" HorizontalAlignment="Left" Padding="15" FontSize="22" Margin="5,1,0,57" Width="320"></TextBlock>
                         </StackPanel>
-
+                        <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="2">
+                            <TextBlock  HorizontalAlignment="Left"
+                                    Margin="0,60,0,0" Grid.Row="2" 
+                                    TextWrapping="Wrap" 
+                                    Text="Rating:"
+                                    VerticalAlignment="Top" Height="52"
+                                    FontSize="22" Padding="15" Width="99"/>
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Padding="15" Grid.Row="2" Margin="5,66,0,0" Height="52" Width="131" Grid.Column="1" >
+                                <SymbolIcon Symbol="Favorite"
+                    Foreground="White"></SymbolIcon>
+                                <SymbolIcon Symbol="Favorite"
+                    Foreground="Yellow"></SymbolIcon>
+                                <SymbolIcon Symbol="Favorite"
+                    Foreground="Yellow"></SymbolIcon>
+                                <SymbolIcon Symbol="Favorite"
+                    Foreground="Yellow"></SymbolIcon>
+                                <SymbolIcon Symbol="Favorite"
+                    Foreground="Yellow"></SymbolIcon>
+                            </StackPanel>
+                        </StackPanel>
 
                         <TextBlock Text="{x:Bind Vm.SelectedProperty.Information, Mode=OneWay}"
 
-                       Grid.Row="3" Grid.Column="1"
+                       Grid.Row="3"
 
                        HorizontalAlignment="Left"
 
@@ -333,30 +301,21 @@
 
                        TextWrapping="WrapWholeWords"
 
-                       FontSize="13" Margin="44.667,10.333,0,0" Width="311" Height="470" VerticalAlignment="Top"/>
+                       FontSize="13" Margin="10,10,0,0" Width="473" Height="227" VerticalAlignment="Top" Grid.RowSpan="2"/>
 
-
-                        <TextBlock  HorizontalAlignment="Left"
-                                    Margin="0,59.667,0,0" Grid.Row="2" 
-                                    TextWrapping="Wrap" 
-                                    Text="Rating:"
-                                    VerticalAlignment="Top" Height="52"
-                                    FontSize="22" Padding="15" Width="203"
-                                    Grid.ColumnSpan="2"/>
-                        <TextBlock  HorizontalAlignment="Left" Margin="0,10.333,0,0" Grid.Row="3" TextWrapping="Wrap" Text="Information:" VerticalAlignment="Top" Width="203" Height="55" FontSize="22" Padding="15" Grid.ColumnSpan="2"/>
                         <Button Content="Book"
 
                        Grid.Row="4" Grid.Column="1"
 
                        HorizontalAlignment="Right"
 
-                       Margin="15"
+                       Margin="0,15,15,15"
 
                        Width="150"
 
                        FontSize="22"
                                 Command="{x:Bind Vm.NavigationControl.NavigateToCommand}"
-                                CommandParameter="CreateBookingView" >
+                                CommandParameter="CreateBookingView" Height="42" >
                             <Button.Background>
                                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                                     <GradientStop Color="Black" Offset="0"/>
@@ -415,25 +374,27 @@
                        Source="{x:Bind Vm.SelectedImageString, Mode=OneWay}" Margin="59,0,70,10" Height="260" VerticalAlignment="Bottom"/>
 
                     </Grid>
-                    <ListView Grid.Row="1"   ItemsSource="{x:Bind Vm.SelectedProperty.TypesOfApartments.Values}" Margin="0,40,0,49" Grid.Column="1" >
+                    <ListView Grid.Row="1"   ItemsSource="{Binding SelectedProperty.TypesOfApartments}" Margin="483,0,10,10" Grid.ColumnSpan="2" >
                         <ListView.ItemTemplate>
-                            <DataTemplate x:DataType="models:TypeOfApartment">
-                                <Grid Width="547" Height="157">
+                            <DataTemplate>
+                                <Grid Width="634" Height="Auto">
                                     <Grid.RowDefinitions>
-                                        <RowDefinition Height="132*"/>
-                                        <RowDefinition Height="25*"/>
+                                        <RowDefinition Height="20*"/>
                                     </Grid.RowDefinitions>
-                                    <TextBlock Text="{x:Bind  }" Height="25" FontSize="12" Padding="5" Margin="172,0,10,107" TextWrapping="Wrap" />
-                                    <TextBlock Text="{x:Bind  InformationAboutApartment}" Padding="5" TextWrapping="Wrap" FontSize="12" Margin="172,46,0,36" Height="50"   />
-                                    <TextBlock Text="{x:Bind MaxPeople }" Padding="5" Height="24" FontSize="12" Margin="172,101,0,0" VerticalAlignment="Top" />
-                                    <TextBlock Text="Information:" FontSize="18" HorizontalAlignment="Left" Width="147" Height="25"  Margin="0,47,0,60"/>
-                                    <TextBlock Text="Type of Room:" FontSize="18" Height="25" HorizontalAlignment="Left" Width="147" Margin="0,0,0,107"/>
-                                    <TextBlock Text="Max People:" Height="25" FontSize="18" HorizontalAlignment="Left" Width="147" Margin="0,100,0,7"/>
-
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="{Binding Key}" HorizontalAlignment="Right" TextAlignment="Right" VerticalAlignment="Center" FontSize="18" Height="25" Width="124" TextWrapping="WrapWholeWords" Margin="0,23,0,22"/>
+                                        <TextBlock Text="{Binding Value.DisplayApartInfo}" FontSize="12" Padding="5" Margin="5,0,10,0" HorizontalAlignment="Center" VerticalAlignment="Center" TextWrapping="WrapWholeWords" Width="504" Height="Auto" />
+                                    </StackPanel>
                                 </Grid>
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
+                    <TextBlock x:Name="textBlock" Grid.Column="1" HorizontalAlignment="Center" Margin="116,-4,126,0" TextWrapping="Wrap" Text="Accommodation Types:" VerticalAlignment="Top"
+                       Grid.Row="0"
+
+                       FontSize="30"
+
+                       Padding="9" />
 
                 </Grid>
 
